--- a/about/index.html
+++ b/about/index.html
@@ -139,6 +139,7 @@
       <h1>About Me</h1>
 <p>I am a person that writes stuff.</p>
 <p>Here's a picture of me:</p>
+<p><img src="/11ty-tech-blog/img/TmGnFWV1Xi-1200.jpeg" alt="Placeholder Developer Picture"></p>
 <h2>Open Source Projects</h2>
 <ul>
 <li>stuff 1</li>
